--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
     <fragment
         android:id="@+id/main_fragment_weather"
-        android:name="me.objectyan.weatherbaby.fragment.WeatherPagerAdapterFragment"
+        android:name="me.objectyan.weatherbaby.fragment.WeatherPagerFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="40dp" />
