--- a/app/src/main/res/layout/fragment_weather_pager_adapter.xml
+++ b/app/src/main/res/layout/fragment_weather_pager_adapter.xml
@@ -8,7 +8,8 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/wpaf_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"/>
 
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/wpaf_indicator"
