添加空气质量与舒适度

--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -5,21 +5,40 @@
     android:layout_height="match_parent"
     tools:context=".fragment.WeatherFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
-        <include
-            layout="@layout/fragment_weather_today"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <include
-            layout="@layout/fragment_weather_timeline"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            <include
+                layout="@layout/fragment_weather_today"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+            <include
+                layout="@layout/fragment_weather_timeline"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
 
+            <include
+                layout="@layout/fragment_weather_forecast"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <include
+                layout="@layout/fragment_weather_atmosphere"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <include
+                layout="@layout/fragment_weather_comfort_degree"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
