--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="TintableImageView">
-        <attr name="tint" format="reference|color" />
+    <declare-styleable name="ArcView">
+        <attr name="min" format="reference|float|integer" />
+        <attr name="max" format="reference|float|integer" />
+        <attr name="title" format="reference|string" />
+        <attr name="value" format="string|reference" />
+        <attr name="subValue" format="string|reference" />
     </declare-styleable>
 </resources>
