修改弧形插件样式

--- a/app/src/main/res/layout/fragment_weather_atmosphere.xml
+++ b/app/src/main/res/layout/fragment_weather_atmosphere.xml
@@ -43,6 +43,8 @@
                 android:gravity="center_vertical"
                 app:max="500"
                 app:min="0"
+                app:progressColor="@color/colorAtmospherePColor"
+                app:backgroundColor="@color/colorAtmosphereBColor"
                 app:title="@string/Atmosphere_AQI" />
 
             <LinearLayout
