--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3773E7</color>
+
     <color name="colorPrimaryDark">#3773E7</color>
     <color name="colorAccent">#D81B60</color>
 
@@ -12,4 +13,7 @@
 
     <color name="colorTemp">#FFFFFFFF</color>
     <color name="colorTips">#DADADA</color>
+    
+    <color name="colorAtmospherePColor">#FF40C4FF</color>
+    <color name="colorAtmosphereBColor">#FFDADADA</color>
 </resources>
