--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,5 +6,7 @@
         <attr name="title" format="reference|string" />
         <attr name="value" format="string|reference" />
         <attr name="subValue" format="string|reference" />
+        <attr name="backgroundColor" format="color|reference" />
+        <attr name="progressColor" format="color|reference" />
     </declare-styleable>
 </resources>
