添加城市管理属性与图标及样式

--- a/app/src/main/res/menu/menu_header.xml
+++ b/app/src/main/res/menu/menu_header.xml
@@ -1,7 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="me.objectyan.weatherbaby.activities.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_main_settings"
         android:icon="@drawable/ic_toolbar_setting"
