--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,18 +8,26 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textViewStyle">@style/AppTheme.TextViewStyle</item>
         <item name="android:statusBarColor" tools:ignore="NewApi">@color/transparent</item>
+        <item name="colorControlNormal">@color/colorTemp</item>
     </style>
 
     <style name="AppTheme.Light" parent="AppTheme">
         <item name="actionBarPopupTheme">@null</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
     <style name="AppTheme.TextViewStyle" parent="android:Widget.TextView">
         <item name="android:textColor">@color/colorTips</item>
+    </style>
+
+    <style name="AppTheme.Toolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="titleTextAppearance">@style/AppTheme.Toolbar.Title</item>
+        <item name="subtitleTextAppearance">@style/AppTheme.Toolbar.Title</item>
+    </style>
+
+    <style name="AppTheme.Toolbar.Title" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textColor">@color/colorTemp</item>
     </style>
 
 </resources>
