--- a/app/src/main/res/layout/fragment_weather_pager_adapter.xml
+++ b/app/src/main/res/layout/fragment_weather_pager_adapter.xml
@@ -2,14 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment.WeatherPagerAdapterFragment">
+    android:layout_height="match_parent">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/wpaf_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp" />
 
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/wpaf_indicator"
