--- a/app/src/main/res/layout/fragment_weather_wind.xml
+++ b/app/src/main/res/layout/fragment_weather_wind.xml
@@ -59,7 +59,7 @@
                         android:text="@string/Wind_Direction" />
 
                     <TextView
-                        android:id="@+id/atmosphere_PM10"
+                        android:id="@+id/wind_direction"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -79,7 +79,7 @@
                         android:text="@string/Wind_Power" />
 
                     <TextView
-                        android:id="@+id/atmosphere_PM25"
+                        android:id="@+id/wind_power"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
