--- a/app/src/main/res/layout/activity_city_manage_item.xml
+++ b/app/src/main/res/layout/activity_city_manage_item.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/city_weather_icon"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
@@ -47,21 +48,51 @@
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/city_weather_min"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="10"
-                    android:textColor="@color/colorTemp" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/city_weather_max"
+                    <TextView
+                        android:id="@+id/city_weather_min"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="10"
+                        android:textColor="@color/colorTemp" />
+
+                    <TextView
+                        android:id="@+id/temp_curr_min_unit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/Centigrade"
+                        android:textSize="15sp" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="100"
-                    android:textColor="@color/colorTemp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/city_weather_max"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="100"
+                        android:textColor="@color/colorTemp" />
+
+                    <TextView
+                        android:id="@+id/temp_curr_max_unit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/Centigrade"
+                        android:textSize="15sp" />
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
