--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,25 @@
 
     <include layout="@layout/main_header" />
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/wpaf_viewpager"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="?actionBarSize"
+        android:orientation="vertical">
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/wpaf_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
+    </LinearLayout>
 
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/wpaf_indicator"
         android:layout_width="match_parent"
         android:layout_height="8dp"
         android:layout_gravity="top"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="36dp"/>
-
+        android:layout_marginTop="38dp"
+        android:layout_marginBottom="5dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
