--- a/app/src/main/res/layout/fragment_weather_forecast_item.xml
+++ b/app/src/main/res/layout/fragment_weather_forecast_item.xml
@@ -13,6 +13,7 @@
         android:paddingRight="5dp">
 
         <TextView
+            android:id="@+id/forecast_item_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignRight="@id/forecast_item_ic_weather"
@@ -20,7 +21,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:gravity="left"
-            android:text="12月14日明天"
+            android:text="@string/forecast_item_date_format"
+            android:textColor="@color/colorTemp"
             android:textSize="15sp" />
 
         <androidx.appcompat.widget.AppCompatImageView
