--- a/app/src/main/res/layout/fragment_weather_wind.xml
+++ b/app/src/main/res/layout/fragment_weather_wind.xml
@@ -36,6 +36,7 @@
             android:paddingBottom="15dp">
 
             <me.objectyan.weatherbaby.widget.WindView
+                android:id="@+id/wind_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
