--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -98,6 +98,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:paddingTop="15dp"
         android:gravity="center"
         android:text="@string/no_matched_city"
         android:textSize="16sp"
