--- a/app/src/main/res/layout/fragment_weather_header.xml
+++ b/app/src/main/res/layout/fragment_weather_header.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/header_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize">
+    android:layout_height="?attr/actionBarSize"
+    app:popupTheme="@style/AppTheme.Toolbar.PopupTheme">
 
     <LinearLayout
         android:layout_width="wrap_content"
