--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:screenOrientation">portrait</item>
         <item name="android:windowBackground">@mipmap/wallpaper_defalut</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorTemp</item>
         <item name="android:textViewStyle">@style/AppTheme.TextViewStyle</item>
         <item name="android:statusBarColor" tools:ignore="NewApi">@color/transparent</item>
         <item name="colorControlNormal">@color/colorTemp</item>
@@ -24,6 +24,20 @@
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="titleTextAppearance">@style/AppTheme.Toolbar.Title</item>
         <item name="subtitleTextAppearance">@style/AppTheme.Toolbar.Title</item>
+        <item name="popupTheme">@style/AppTheme.Toolbar.PopupTheme</item>
+    </style>
+
+    <style name="AppTheme.Toolbar.PopupTheme" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <item name="overlapAnchor">false</item>
+        <item name="android:dropDownWidth">wrap_content</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:dividerHeight">1dp</item>
+        <item name="android:textColor">@color/colorTemp</item>
+        <item name="android:textViewStyle">@style/AppTheme.Toolbar.PopupTheme.TextViewStyle</item>
+    </style>
+
+    <style name="AppTheme.Toolbar.PopupTheme.TextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">#000</item>
     </style>
 
     <style name="AppTheme.Toolbar.Title" parent="TextAppearance.AppCompat.Title">
