添加小时接口

--- a/app/src/main/res/layout/fragment_weather_timeline.xml
+++ b/app/src/main/res/layout/fragment_weather_timeline.xml
@@ -19,15 +19,14 @@
             android:layout_height="wrap_content"
             android:scrollbars="none">
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/timeline_items"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp">
 
-            </LinearLayout>
+            </androidx.recyclerview.widget.RecyclerView>
         </HorizontalScrollView>
 
         <LinearLayout
