添加小时数据

--- a/app/src/main/res/layout/fragment_weather_timeline_item.xml
+++ b/app/src/main/res/layout/fragment_weather_timeline_item.xml
@@ -14,19 +14,20 @@
         android:paddingBottom="10dp">
 
         <TextView
+            android:id="@+id/time"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:id="@+id/time"
             android:text="下午5:00"
+            android:textColor="@color/colorTemp"
             android:textSize="10sp" />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/time_icon"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
-            android:id="@+id/time_icon"
             app:srcCompat="@drawable/ic_weather_sunny" />
 
         <TextView
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="100°C"
+            android:textColor="@color/colorTemp"
             android:textSize="10sp" />
 
     </LinearLayout>
