--- a/app/src/main/res/layout/fragment_weather_lifestyle_item.xml
+++ b/app/src/main/res/layout/fragment_weather_lifestyle_item.xml
@@ -7,7 +7,7 @@
     app:cardBackgroundColor="@color/transparent">
 
     <LinearLayout
-        android:id="@+id/city_weather_layout"
+        android:id="@+id/lifestyle_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
