--- a/app/src/main/res/layout/fragment_weather_today.xml
+++ b/app/src/main/res/layout/fragment_weather_today.xml
@@ -123,14 +123,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="15dp">
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
+
+            <TextView
+                android:id="@+id/today_temp_publish_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:text="@string/weather_publish_time"
+                android:textSize="8sp" />
 
             <TextView
                 android:id="@+id/today_temp_update_time"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:text="更新时间"
+                android:layout_gravity="end"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="@string/weather_update_time"
                 android:textSize="8sp" />
 
         </LinearLayout>
