--- a/app/src/main/res/layout/fragment_weather_header.xml
+++ b/app/src/main/res/layout/fragment_weather_header.xml
@@ -4,18 +4,22 @@
     android:id="@+id/header_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:padding="0dp"
     app:popupTheme="@style/AppTheme.Toolbar.PopupTheme">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="0dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image_location"
             android:layout_width="20dp"
             android:layout_height="25dp"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:srcCompat="@drawable/ic_location" />
 
         <TextView
@@ -25,6 +29,7 @@
             android:text="@string/title_activity_main"
             android:textColor="@color/colorTemp"
             android:textSize="20dp" />
+
     </LinearLayout>
 
 </androidx.appcompat.widget.Toolbar>
