--- a/app/src/main/res/layout/fragment_weather_lifestyle.xml
+++ b/app/src/main/res/layout/fragment_weather_lifestyle.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp">
 
-            <GridView
+            <me.objectyan.weatherbaby.widget.GridView
                 android:id="@+id/gv_lifestyle_manage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
                 android:scrollbars="none"
                 android:verticalSpacing="5dp">
 
-            </GridView>
+            </me.objectyan.weatherbaby.widget.GridView>
         </LinearLayout>
 
         <LinearLayout
