--- a/app/src/main/res/layout/fragment_weather_timeline.xml
+++ b/app/src/main/res/layout/fragment_weather_timeline.xml
@@ -19,14 +19,20 @@
             android:layout_height="wrap_content"
             android:scrollbars="none">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/timeline_items"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            </androidx.recyclerview.widget.RecyclerView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/timeline_items"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+            </RelativeLayout>
         </HorizontalScrollView>
 
         <LinearLayout
